# fruit-detection

./: .gitignore  1_SVM.ipynb  2_KNN.ipynb  3_DecisionTree.ipynb  4_RandomForest.ipynb  5_XGBoost.ipynb  Copy_of_updated_cnn.ipynb  FruitClassifierANN.ipynb  FruitClassifierCNN.ipynb  FruitClassifierCNN2.ipynb  LICENSE  README.md  classic_ML.ipynb  draft_setup.ipynb  main.py  pyproject.toml  sample.ipynb  simple_cnn.ipynb  simple_cnn_improved.ipynb  utils.py
deliverables/: ML PP.pptx
