[project]
name = "fruit-detection"
version = "0.1.0"
description = "Deep learning–based fruit recognition system that classifies images of different fruits using computer vision techniques."
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.2",
    "huggingface-hub>=1.2.4",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pandas-stubs>=2.3.3.251219",
]
